fix css word wrap bug

--- a/client/style.css
+++ b/client/style.css
@@ -5,6 +5,7 @@ body {
   padding-bottom: 3rem;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
     Arial, sans-serif;
+  word-wrap: break-word;
 }
 
 /* Title */
